Replace and Pop

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!--Wallpaper-->
+
+    <ImageView
+        android:src="@drawable/wallpaper_clear"
+        android:scaleType="fitXY"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
    <!--Content of fragment-->
 
     <FrameLayout
