--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#62efff</color>
+    <color name="colorPrimary">#237680</color>
     <color name="colorPrimaryDark">#008ba3</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
