Answer Spinner Success

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="h1">24sp</dimen>
     <dimen name="h2">15sp</dimen>
+    <dimen name="padding">16dp</dimen>
+    <dimen name="padding8">8dp</dimen>
 </resources>
