--- a/app/src/main/res/layout/fragment_unit1.xml
+++ b/app/src/main/res/layout/fragment_unit1.xml
@@ -84,6 +84,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <!--head3-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding"
+                android:text="3. What are the components of a computer?"
+                android:textSize="@dimen/h2"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:layout_marginTop="@dimen/padding8"
+                android:id="@+id/spinner4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
 
         </LinearLayout>
 
