--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="h2">15sp</dimen>
     <dimen name="padding">16dp</dimen>
     <dimen name="padding8">8dp</dimen>
+    <dimen name="padding4">4dp</dimen>
+    <dimen name="icon">60dp</dimen>
 </resources>
